# utility-cxx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  FEATURES.md
examples/: CMakeLists.txt  example.cpp
include/utility/: container_format.hpp  format.hpp  memory.hpp  ostream.hpp  ranges.hpp  scope.hpp  span.hpp  span_format.hpp  span_ostream.hpp  string_view.hpp  string_view_format.hpp  string_view_hasher.hpp  string_view_ostream.hpp  string_view_ranges.hpp  tuple.hpp  types.hpp  utility.hpp
include/utility/internal/: container_writer.hpp  detail.hpp  macros.hpp  std_format_proxy.hpp  version.hpp
include/utilitycxx/: container_format.hpp  format.hpp  memory.hpp  ostream.hpp  ranges.hpp  scope.hpp  span.hpp  span_format.hpp  span_ostream.hpp  string_view.hpp  string_view_format.hpp  string_view_hasher.hpp  string_view_ostream.hpp  string_view_ranges.hpp  tuple.hpp  types.hpp  utility.hpp
include/utilitycxx/internal/: container_writer.hpp  detail.hpp  macros.hpp  std_format_proxy.hpp  version.hpp
tests/: CMakeLists.txt  test_format_cpp20.cpp  test_memory.cpp  test_ranges_utility.cpp  test_scope.cpp  test_span.cpp  test_string_view.cpp  test_string_view_ranges.cpp  test_tuple.cpp  test_utility.cpp
